--- a/day-3-first-folder/index.html
+++ b/day-3-first-folder/index.html
@@ -1,29 +1,10 @@
-<!doctype html>
+<!Doctype html>
 <html>
-  <head>
-    <heta charset="utf-8" />
-    <title>Day 3 - First LWA Thing</title>
-    <link href="style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <h1> Day 3</h1>
-
-    <p> This is Day 3 material</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </body>
+<head>
+  <title></title>
+  <meta>
+</head>
+<body>
+  <h1> This is a Super Duper Fly Website</h1>
+</body>
 </html>
