--- a/day-4-float/day-4-jesse/index.html
+++ b/day-4-float/day-4-jesse/index.html
@@ -28,6 +28,74 @@
         </div>
     </section>
 
+    <section class="recent-projects">
+
+
+        <div class="projects">
+          <img src="project-hawaiian.png">
+          <h3>Hawaii Airlines</h3>
+          <p>UX,UI,Development</p>
+        </div>
+        <div class="projects">
+          <img src="project-memorate.png">
+          <h3>Memorate</h3>
+          <p>Strategic Direction, UX,UI</p>
+        </div>
+        <div class="projects"><img src="project-hawaiifirst-rwd.jpg">
+          <h3>Hawaiian First</h3>
+          <p>Development,CMS Integration</p>
+        </div>
+
+      <div class="projects-row">
+        <div class="projects">
+          <img src="project-littlebig-rwd.jpg">
+          <h3>Little Big Plumbing</h3>
+          <p>Responsive Web Design, Development</p>
+        </div>
+        <div class="projects">
+          <img src="project-matsumoto-rwd.jpg"><h3>Rep Matsumoto</h3>
+          <p>Development,Responsive Web Design, UX</p>
+        </div>
+        <div class="projects">
+          <img src="project-jimmygirl.png">
+          <h3>Jimmy Girl</h3>
+          <p>Branding,Marketing,Design</p>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="story">
+    <div class="story-details">
+      <h2>Let me explain... No there is <br /> too much... let me sum up.</h2>
+      <p>What do Web Development, Sleek Modern Design, Punk Rock Music, Theology, and Family all have in common? The answer is... <a href="jesseshowalter.com">Jesse Showalter</a href>. I love all these things and more, click to find out a bit more about the man behind the website.</p>
+    </div>
+    <div class="full-story">
+      <p>GET THE FULL STORY</p>
+    </div>
+
+    </section>
+
+    <section class="what-i-do">
+
+      <div class="particular-thing web-design">
+        <h3>Web Design</h3>
+        <p> Designing for hte web is not a job its a lifestyle. AS technology changes so does the challenge.</p>
+      </div>
+      <div class="particular-thing ux-design"><h3>UX Design</h3><p>An extension of my love for design and problem solving UX allows me to dictate the skeleton.</p.</div>
+      <div class="particular-thing"><h3>Development</h3><p>I love bringing my design to life in HTML, CSS & Javascript, also acting like a mad scientist.K/p></div>
+      <div class="particular-thing"><h3>UI Design</h3><p>I design user friendly, intuitive interfaces allowing users to focus on the task and not the tool.</p></div>
+      <p>The force is strong with Jesse, He is the real deal. He designed and developed the kickstartr material for our new deathstar campaign. The amazing work he did for us is a real as this review.</p>
+      <div></div>
+      <p>Darth Vader</p>
+    </section>
+
+    <section class="footer">
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+    </section>
 
   </body>
 
