--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 <ol>
+  <li><a href="day-4-float/index.html">Day 4 - Float</a></li>
   <li><a href="day-4-jesse/index.html">Day 4 - Jesse</a></li>
+  <li><a href="day-6-chris-cook/index.html">Day-6 - Chris Cook</a></li>
+</ol>
 
 
 
