add day 3 positioning

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <ol>
+  <li><a href="day-3-first-folder/line-height/positioning-excercise.html">Day 3 - Positioning Excercise</a></li>
   <li><a href="day-4-float/index.html">Day 4 - Float</a></li>
   <li><a href="day-4-jesse/index.html">Day 4 - Jesse</a></li>
   <li><a href="day-6-chris-cook/index.html">Day-6 - Chris Cook</a></li>
