finished iron news

--- a/day-3-a-list-apart/index.html
+++ b/day-3-a-list-apart/index.html
@@ -14,7 +14,7 @@
 
     <section class="mini-sub-header">
       <div class="red-box"><h6>NEW!</h6></div>
-      <div><h5>NOV 1, 2016</h5></div>
+      <div class="date"><h5>NOV 1, 2016</h5></div>
     </section>
 
     <section class="article-one">
