--- a/day-7-iron-news/index.html
+++ b/day-7-iron-news/index.html
@@ -31,108 +31,106 @@
         <a href="https://qz.com/937038/github-now-lets-its-workers-keep-the-ip-when-they-use-company-resources-for-personal-projects/?s=1">GitHub lets staff own IP developed for personal projects using company resources</a></li>
         <div class="stats-container">
         <ul class="stats">
-          <li>### points</li>
-          <li>by 'name'</li>
-          <li>## hours ago</li>
-          <li>| hide |</li>
-          <li>### comments</li>
+          <li><a href="#">### points</a></li>
+          <li><a href="#">by 'name'</a></li>
+          <li><a href="#">## hours ago</a></li>
+          <li>|<a href="#"> hide |</a></li>
+          <li><a href="#">### comments</a></li>
         </ul>
       </div>
 
       <li><a href="https://twitter.com/billpollock/status/844030960333152256">Sellers printing couterfeit books and selling under Amazon's brand</a></li><div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
       <li><a href="https://lwn.net/SubscriberLink/717076/4c3593aa4cad8e66/">2038: Only 21 years away</a></li>
       <div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
       <li><a href="https://github.com/facebookexperimental/JSCaml">JSCaml: A compile-time transfomration from JavaScript to OCaml</a></li>
       <div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
       <li><a href="http://nil.csail.mit.edu/6.824/2015/notes/paxos-code.html">Paxos in 25 Lines</a></li>
       <div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
       <li><a href="https://www.techpowerup.com/231536/amd-ryzen-machine-crashes-to-a-sequence-of-fma3-instructions">AMD Ryzen Machine Crashes on a Sequence of FMA3 Instructions</a></li>
       <div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
       <li><a href="">A Visual Guide to What's New in Swagger 3.0</a></li>
       <div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
-
 
       <li><a href="">LastPass RCE vulnerability fixed</a></li>
       <div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
 
       <li><a href="">A simple command allows the CIA to commandeer vulnerable CISCO swithces</a></li>
       <div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
 
       <li><a href="">Amsterdam Arport Lauces API Platform</a></li>
       <div class="stats-container">
       <ul class="stats">
-        <li>### points</li>
-        <li>by 'name'</li>
-        <li>## hours ago</li>
-        <li>| hide |</li>
-        <li>### comments</li>
+        <li><a href="#">### points</a></li>
+        <li><a href="#">by 'name'</a></li>
+        <li><a href="#">## hours ago</a></li>
+        <li>|<a href="#"> hide |</a></li>
+        <li><a href="#">### comments</a></li>
       </ul>
     </div>
-
 
     </ol>
   </section>
