updated main index to repo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <li><a href="day-4-jesse/index.html">Day 4 - Jesse</a></li>
   <li><a href="day-6-chris-cook/index.html">Day 6 - Chris Cook</a></li>
   <li><a href="day-7-iron-news/index.html">Day 7 - Iron News</a></li>
+  <li><a href="day-11-get-element-and-change-it/index.html">Day 11 - Get Element and Change It</a></li>
 </ol>
 
 
