--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <li><a href="day-6-chris-cook/index.html">Day 6 - Chris Cook</a></li>
   <li><a href="day-7-iron-news/index.html">Day 7 - Iron News</a></li>
   <li><a href="day-11-get-element-and-change-it/index.html">Day 11 - Get Element and Change It</a></li>
+  <li><a href="day-12-change-text-on-click/index.html">Day 12 - Change Text On Click</a></li>
 </ol>
 
 
