added instruct. and other small changes

--- a/day-12-change-text-on-click/index.html
+++ b/day-12-change-text-on-click/index.html
@@ -14,7 +14,8 @@
 
 
       <section class="top-element">
-        <div></div>
+        <div class="instructions"><p>Click quote for censored text</p>
+        </div>
         <div>
           <h1 id="snake-Quote">"I have had it with these motherfucking snakes on this motherfucking plane!"</h1>
 
