need more control over toggle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <li><a href="day-7-iron-news/index.html">Day 7 - Iron News</a></li>
   <li><a href="day-11-get-element-and-change-it/index.html">Day 11 - Get Element and Change It</a></li>
   <li><a href="day-12-change-text-on-click/index.html">Day 12 - Change Text On Click</a></li>
+  <li><a href="day-12-toggle-class-on-click/index.html">Day 12 - Toggle Class On Click</a></li>
 </ol>
 
 
