--- a/day-3-a-list-apart/index.html
+++ b/day-3-a-list-apart/index.html
@@ -6,6 +6,7 @@
     <title>A List Apart</title>
   </head>
   <body>
+    <section class="wrapper">
     <header>
       <h1>A LIST APART</h1>
       <div class="raft-image">
@@ -13,15 +14,15 @@
     </header>
 
     <section class="mini-sub-header">
-      <div class="red-box"><h6>NEW!</h6></div>
-      <div class="date"><h5>NOV 1, 2016</h5></div>
+      <span class="red-thing"><h5>NEW!</h5></span>
+      <span class="date"><h5>NOV 1, 2016</h5></span>
     </section>
 
     <section class="article-one">
       <div class="emotion-article">
       <h2>Let Emotion Be Your Guide</h2>
-      <h6>by<a href""> Hana Schank, Jana Sedivy</a></h6>
-      <p>There is no separate digital experience for human emotions. In the realm of feelings  it's all real life. Hana Schank and Jana Sedivy learned from their suprising and transformative encounters with users of a hospital website that you gain deeper insights when you let emotion take the wheel once in a while
+      <h6>by <a href="">Hana Schank, Jana Sedivy</a></h6>
+      <p>There is no separate digital experience for human emotions. In the realm of feelings  it's all real life. Hana Schank and Jana Sedivy learned from their suprising and transformative encounters with users of a hospital website that you gain deeper insights when you let emotion take the wheel once in a while</p>
       </div>
     </section>
 
@@ -33,6 +34,6 @@
       </div>
     </section>
 
-    <article
+  </section>
   </body>
 </html>
