--- a/day-16-build-a-simple-list/index.html
+++ b/day-16-build-a-simple-list/index.html
@@ -7,17 +7,27 @@
     </head>
     <body>
 
+      <header>
+        <h1>A Simple Little List</h1>
+      </header>
 
-      <h1>List</h1>
+      <div class="container">
 
+
+      <div id="side-bar">
+      </div>
+
+
+
+      <div id="main-content">
+        <h1>List</h1>
           <ol id="the-list">
-
+            <li>list itme</li>
           </ol>
+      </div>
 
 
-
-
-
+    </div>
 
 
 
