--- a/day-16-multi-toggle-on-click/index.html
+++ b/day-16-multi-toggle-on-click/index.html
@@ -35,7 +35,7 @@
           <h1>JOHNNY</h1>
         </div>
 
-
+<button id="add-thing">add thing</script>
       </div>
       <script src="script.js"></script>
     </body>
