finished toggle assignment

--- a/day-16-multi-toggle-on-click/index.html
+++ b/day-16-multi-toggle-on-click/index.html
@@ -7,36 +7,36 @@
     </head>
     <body>
       <header>
-        <h1>Members of New Edition</h1>
+        <h2>Members of New Edition</h2>
       </header>
-      <div class="div-container">
 
-        <div id ="ralph-div" class="bubble">
-          <h1>RALPH</h1>
-        </div>
+      <ol class="div-container">
 
-        <div id="bobby-div" class="bubble">
-          <h1>BOBBY</h1>
-        </div>
+        <li id ="ralph-div" class="bubble">
+          RALPH
+        </li>
 
-        <div id="ricky-div" class="bubble">
-          <h1>RICKY</h1>
-        </div>
+        <li id="bobby-div" class="bubble">
+          BOBBY
+        </li>
 
-        <div id="mike-div" class="bubble">
-          <h1>MIKE</h1>
-        </div>
+        <li id="ricky-div" class="bubble">
+          RICKY
+        </li>
 
-        <div id="ronnie-div" class="bubble">
-          <h1>RONNIE</h1>
-        </div>
+        <li id="mike-div" class="bubble">
+          MIKE
+        </li>
 
-        <div id="johnny-div" class="bubble">
-          <h1>JOHNNY</h1>
-        </div>
+        <li id="ronnie-div" class="bubble">
+          RONNIE
+        </li>
 
-<button id="add-thing">add thing</script>
-      </div>
+        <li id="johnny-div" class="bubble">
+          JOHNNY
+        </li>
+
+      </ol>
       <script src="script.js"></script>
     </body>
   </html>
