update master index for toggle assignment

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="day-12-change-text-on-click/index.html">Day 12 - Change Text On Click</a></li>
   <li><a href="day-12-octocats/index.html">Day 12 - Octocats</a></li>
   <li><a href="day-12-toggle-class-on-click/index.html">Day 12 - Toggle Class On Click</a></li>
+  <li><a href="day-16-multi-toggle-on-click/index.html">Day 16 - Multi Toggle On Click</li>
 </ol>
 
 
