taylor swift page

--- a/day-18-scroll-event/index.html
+++ b/day-18-scroll-event/index.html
@@ -2,26 +2,33 @@
   <html>
     <head>
       <meta charset="utf-8" />
-      <link rel="stylesheet" href="css.style" />
+      <link rel="stylesheet" href="style.css" />
       <title>Scroll Event</title>
     </head>
     <body>
 
-      <header>
-        <ul>
-          <li>home</li>
-          <li>blog</li>
-          <li>about</li>
-          <li>contact</li>
+      <header class="nav-bar">
+        <ul class = "nav-list">
+          <li><a href="">home</a></li>
+          <li><a href="">blog</a></li>
+          <li><a href="">about</a></li>
+          <li><a href="">contact</a></li>
         </ul>
       </header>
 
-      <section>
-        <div><img src="taylor-swift.jpg"></img>
+      <section class="taylor-pic">
+        <div class="tay-jpg"><img src="taylor-swift.jpg"></img>
+      </section>
+
+      <section class="honest-abe">
+        <div>
+        <h4>"The Taylor Swift quote that will forever change your life."</h4>
+        <h5>-Abraham Lincoln</h5>
+      </div>
       </section>
 
 
-      <section>
+      <section class="taylor-quote">
         <p>I'm intimidated by the fear of being average.
           No matter what happens in life, be good to people. Being good to people is a wonderful legacy to leave behind.
           People haven't always been there for me but music always has.
@@ -36,10 +43,9 @@
       </section>
 
 
-      <section>
-        <div><img src="kanye-west.jpg"></img></div>
-        <div><h3>I'mma let you finish but Beyonce has a much quote!</h3></div>
-      </section>
+    <!--  <section class="kanye-popup" class ="kanye-popdown">
+        <div class="kanye-pic"><img src="kanye-west.jpg"></img></div>
+        <div class="kanye-quote"><h3>I'mma let you finish but Beyonce </h3> -->
 
 
 
