update for day 18 scroll event

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title></title>
 </head>
 <body>
-<ol>
+<ul>
   <li><a href="day-3-a-list-apart/index.html">Day 3 - A List Apart</a></li>
   <li><a href="day-3-first-folder/positioning-excercise.html">Day 3 - Positioning Excercise</a></li>
   <li><a href="day-4-float/index.html">Day 4 - Float</a></li>
@@ -18,7 +18,8 @@
   <li><a href="day-12-octocats/index.html">Day 12 - Octocats</a></li>
   <li><a href="day-12-toggle-class-on-click/index.html">Day 12 - Toggle Class On Click</a></li>
   <li><a href="day-16-multi-toggle-on-click/index.html">Day 16 - Multi Toggle On Click</li>
-</ol>
+  <li><a href="day-18-scroll-event/index.html">Day 18 - Scroll Event</a></li>
+</ul>
 
 
 
