minor changes. html fully set up

--- a/day-16-build-a-simple-list/index.html
+++ b/day-16-build-a-simple-list/index.html
@@ -15,14 +15,15 @@
 
 
       <div id="side-bar">
+        <div class="button"><h3>CLICK TO ADD ITEMS</h3></div>
       </div>
 
 
 
       <div id="main-content">
-        <h1>List</h1>
+        <h1 class="list-title">Grocery List</h1>
           <ol id="the-list">
-            <li>list itme</li>
+            <li>list item</li>
           </ol>
       </div>
 
