--- a/day-13-css-animations/index.html
+++ b/day-13-css-animations/index.html
@@ -5,7 +5,21 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      <
+
+      <section class="side-bar">
+      </section>
+
+
+      <section class="main-content">
+
+      <div>
+        <div></div>
+        <div></div>
+      </div>
+      </section>
+
+
+
       <script src ="script.js"></script>
     </body>
   </html>
