--- a/day-19-sprite-animation/index.html
+++ b/day-19-sprite-animation/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-      <div id="sprite-sheet" class="link"></div>
+      <div id="leslie" class="leslie"></div>
 
       <button id="foward-button" class="foward-button">foward</button>
 
