--- a/day-16-build-a-simple-list/index.html
+++ b/day-16-build-a-simple-list/index.html
@@ -15,7 +15,7 @@
 
 
       <div id="side-bar">
-        <div class="button"><h3>CLICK TO ADD ITEMS</h3></div>
+        <button class="button"><h3>CLICK TO ADD ITEMS</h3></button>
       </div>
 
 
