still trying to make this work

--- a/day-19-simple-slide-show/index.html
+++ b/day-19-simple-slide-show/index.html
@@ -10,13 +10,7 @@
 
   <body>
 
-
-
-
-
-
-
-      <div class="slide-show"><img src = chuck-norris-death.jpg></img>
+      <div class="slide-show" id="slide-show"><img src="images/"></img>
       </div>
 
 <div class ="button-box">
