just some updates

--- a/day-21-first-ajax/index.html
+++ b/day-21-first-ajax/index.html
@@ -1,15 +1,33 @@
 <!doctype html>
-<html>
+  <html>
   <head>
-  <head>
-
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <title>SWAPI Magic</title>
+  </head>
   <body>
-    <ul id="people-list">
-    </ul>
+    <header>
+      <h1>STAR WARS PERSONNEL AND TRANSPORTATION LOG</h1>
+    </header>
+    <section class="index-info">
+      <p>The following information has been compiled from the world's first quantified and programmatically-formatted set of Star Wars data.</p>
+    </section>
+    <section class="main">
 
+      <div class="sw-personnel" id="category-div">
+        <a href="people.html">
+          <h3>Star Wars Personnel</h3></a></div>
 
+      <div class="sw-vehicles" id="category-div">
+        <a href="vehicles.html">
+          <h3>Star Wars Vehicles</a></h3></div>
 
+      <div class="sw-starships" id="category-div">
+        <a href="starships.html">
+          <h3>Star Wars Starships</a></h3></div>
+
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <script src="script.js"></script>
   </body>
-  </html>
