--- a/day-21-first-ajax/people.html
+++ b/day-21-first-ajax/people.html
@@ -1,17 +1,20 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css"
   <head>
 
+    <header>
+      <h1>Star Wars Personnel</h1>
+    </header>
+
   <body>
-    <ul id="vehicles-list">
+    <ul class="people-list" id="people-list">
     </ul>
 
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="vehicles.js"></script>
+    <script src="people.js"></script>
   </body>
   </html>
