--- a/day-21-first-ajax/starships.html
+++ b/day-21-first-ajax/starships.html
@@ -7,9 +7,14 @@
     </head>
     <body>
 
+      <header>
+        <h1>Star Wars Starships</h1>
+      </header>
+
+    <section>
       <ul id="starship-list">
       </ul>
-
+    </section>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="starships.js"></script>
