--- a/day-21-first-ajax/vehicles.html
+++ b/day-21-first-ajax/vehicles.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css"
-  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <header>
+    <h1>Star Wars Vehicles</h1>
+  </header>
 
   <body>
     <ul id="vehicles-list">
