update main index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <li><a href="day-16-multi-toggle-on-click/index.html">Day 16 - Multi Toggle On Click</li>
   <li><a href="day-18-scroll-event/index.html">Day 18 - Scroll Event</a></li>
   <li><a href="day-16-build-a-simple-list/index.html">Day 16 - Build a Simple List</a></li>
+  <li><a href="day-21-first-ajax">Day 21 - First Ajax (SWAPI)</a></li>
 </ul>
 
 
