--- a/day-21-first-ajax/index.html
+++ b/day-21-first-ajax/index.html
@@ -28,6 +28,7 @@
 
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    <script src="vehicles.js"></script>
+    <script src="starships.js"></script>
     <script src="script.js"></script>
   </body>
