changes that don't affect anything

--- a/day-21-github-users/index.html
+++ b/day-21-github-users/index.html
@@ -5,12 +5,17 @@
 
     <body>
 
-      <input id="search-query" />
+      <header>
+        <span class="title-1">REPO</span>
+        <span class="title-2">SEARCH</span>
+      </header>
 
-      <button
+      <section>
+      <input id="search-query" />
 
       <ul id="github-users">
       </ul>
+    </section>
 
 
 
