--- a/day-22-github-repo-search/index.html
+++ b/day-22-github-repo-search/index.html
@@ -1,17 +1,26 @@
 <!doctype html>
   <html>
     <head>
-      <link rel="stylesheet" href="style.css" /.
+      <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
 
       <header>
-        <h1>Repo SearchHub</h1>
+        <ul class="nav-links">
+          <li>HOME</li>
+          <li>ABOUT</li>
+        </ul>
       </header>
 
       <section>
-      <input id="search-query" />
+        <div id="page-title" class="title-1"><h1>REPO</h1></div>
+        <div id="page-title"class="title-2"><h1>SEARCH HUB</h1></div>
+      </section>
+
+
+      <section>
+      <div><input id="search-query" /></div>
 
       <ul id="repo-directory">
       </ul>
