--- a/day-26-data-attributes/index.html
+++ b/day-26-data-attributes/index.html
@@ -8,7 +8,10 @@
 
     <div data-id="9" id="click-me">click me</div>
 
+    <img src="loading_spinner.gif" />
+
     <ol id="swapi-people">
+      <li></li>
       <li></li>
     </ol>
 
