--- a/day-16-build-a-simple-list/index.html
+++ b/day-16-build-a-simple-list/index.html
@@ -22,9 +22,9 @@
 
       <div id="main-content">
         <h1 class="list-title">Grocery List</h1>
-          <ul id="the-list">
+          <ol id="the-list">
             <li></li>
-          </ul>
+          </ol>
       </div>
 
 
