--- a/day-22-github-repo-search/index.html
+++ b/day-22-github-repo-search/index.html
@@ -14,8 +14,8 @@
       </header>
 
       <section>
-        <div id="page-title" class="title-1"><h1>REPO</h1></div>
-        <div id="page-title"class="title-2"><h1>SEARCH HUB</h1></div>
+        <span id="page-title" class="title-1"><h1>REPO</h1></span>
+        <span id="page-title"class="title-2"><h1>SEARCH HUB</h1></span>
       </section>
 
 
