--- a/day-28-joke-generator/index.html
+++ b/day-28-joke-generator/index.html
@@ -14,7 +14,7 @@
     <section>
       <ul id="the-jokes">
       </ul>
-      <button id="click-for-joke">Click for Joke</button>
+      <button id="randomizer-button">Click for Joke</button>
     </section>
 
 
