trying to get it to work

--- a/day-28-joke-generator/index.html
+++ b/day-28-joke-generator/index.html
@@ -12,10 +12,18 @@
     </header>
 
     <section>
-      <ul id="the-jokes">
-      </ul>
-      <button id="randomizer-button">Click for Joke</button>
+      <div>
+
+        <ul id="randomChuckFactsDisplay">
+        </ul>
+
+        <button id="randomizer-button">Click for Joke</button>
+
+      </div>
     </section>
+
+    <footer>
+    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
