--- a/day-29-multi-step-form/index.html
+++ b/day-29-multi-step-form/index.html
@@ -30,8 +30,7 @@
           <input type="radio" name="age" value="teenager">teenager</input>
           <input type ="radio" name="age" value="20-something">20-something</input>
           <input type="radio" name="age" value="too old">too old</input>
-          <!-- <button id="previous-button">previous</button>
-          <button id="next-button-1">next</button> -->
+          <button id="next-button-2">NEXT</button>
       </section>
 
       <section id="occupation-section">
@@ -41,6 +40,7 @@
             <option>programmer</option>
             <option>well paid programmer</option>
           </select>
+          <button id="submit-button">SUBMIT</button>
         </section>
 
           <section id="thank-you">
