--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
   <li><a href="day-16-multi-toggle-on-click/index.html">Day 16 - Multi Toggle On Click</li>
   <li><a href="day-18-scroll-event/index.html">Day 18 - Scroll Event</a></li>
   <li><a href="day-16-build-a-simple-list/index.html">Day 16 - Build a Simple List</a></li>
+  <li><a href="day-19-time-to-read/index.html">Day 19 -Time to Read</a></li>
   <li><a href="day-21-first-ajax">Day 21 - First Ajax (SWAPI)</a></li>
   <li><a href="day-28-joke-generator/index.html">Day 28 - Joke Generator</a></li>
   <li><a href="day-29-multi-step-form/index.html">Day 29 - Multi Step Form</a></li>
+
 </ul>
 
 
