--- a/day-29-multistep-form/index.html
+++ b/day-29-multistep-form/index.html
@@ -23,7 +23,7 @@
       <h3>First Name</h3>
       <input name="first-name" placeholder="FIRST NAME" id="first-name"/>
       <h3>Last Name</h3>
-      <input name="last-name" placeholder="LAST NAME" id="last-name" />
+      <input name="last-name" placeholder="LAST NAME" id="last-name" /><br />
         <button id="namePrevious">PREVIOUS</button>
         <button id="nameNext">NEXT</button>
     </section>
@@ -31,9 +31,9 @@
     <section id="age-section">
       <h3>AGE</h3>
         <input type ="radio" name="age" value="too-young">too young</input><br />
-        <input type="radio" name="age" value="teenager">teenager</input>
-        <input type ="radio" name="age" value="20-something">20-something</input>
-        <input type="radio" name="age" value="too old">too old</input>
+        <input type="radio" name="age" value="teenager">teenager</input><br />
+        <input type ="radio" name="age" value="20-something">20-something</input><br />
+        <input type="radio" name="age" value="too old">too old</input><br />
         <button id="agePrevious">PREVIOUS</button>
         <button id="ageNext">NEXT</button>
     </section>
@@ -44,7 +44,7 @@
           <option>programmer</option>
           <option>programmer</option>
           <option>well paid programmer</option>
-        </select>
+        </select><br />
         <button id="occupationPrevious">PREVIOUS</button>
         <button id="occupationNext">NEXT</button>
       </section>
