--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title></title>
 </head>
 <body>
+  <h1>WOW! I made all this cool stuff</h1>
 <ul>
   <li><a href="day-3-a-list-apart/index.html">Day 3 - A List Apart</a></li>
   <li><a href="day-3-first-folder/positioning-excercise.html">Day 3 - Positioning Excercise</a></li>
