--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <li><a href="day-21-first-ajax">Day 21 - First Ajax (SWAPI)</a></li>
   <li><a href="day-28-joke-generator/index.html">Day 28 - Joke Generator</a></li>
   <li><a href="day-29-multistep-form/index.html">Day 29 - MultiStep Form</a></li>
+  <li><a href="day-30-really-cool-form/index.html">Day 30 - Really Cool Form</a></li>
 </ul>
 
 
