--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <li><a href="day-4-jesse/index.html">Day 4 - Jesse</a></li>
   <li><a href="day-6-chris-cook/index.html">Day 6 - Chris Cook</a></li>
   <li><a href="day-7-iron-news/index.html">Day 7 - Iron News</a></li>
+  <li><a href="day-11-web-fonts/index.html">Day 11 - Web Fonts </a></li>
   <li><a href="day-11-get-element-and-change-it/index.html">Day 11 - Get Element and Change It</a></li>
   <li><a href="day-12-change-text-on-click/index.html">Day 12 - Change Text On Click</a></li>
   <li><a href="day-12-octocats/index.html">Day 12 - Octocats</a></li>
   <li><a href="day-12-toggle-class-on-click/index.html">Day 12 - Toggle Class On Click</a></li>
   <li><a href="day-16-multi-toggle-on-click/index.html">Day 16 - Multi Toggle On Click</li>
+  <li><a href="day-17-css-transitions/index.html">Day 17 - CSS Transitions</li>
   <li><a href="day-18-scroll-event/index.html">Day 18 - Scroll Event</a></li>
   <li><a href="day-16-build-a-simple-list/index.html">Day 16 - Build a Simple List</a></li>
   <li><a href="day-19-time-to-read/index.html">Day 19 -Time to Read</a></li>
