changes to slideshow appearance

--- a/day-19-simple-slide-show/index.html
+++ b/day-19-simple-slide-show/index.html
@@ -9,19 +9,21 @@
   </head>
 
   <body>
+      <div>
+      <header>
+        <h1>Chuck Norris: The World's Most Dangerous Man</h1>
+      </header>
 
-      <div class="slide-show" id="slide-show"><img src="images/"></img>
+      <div class="slide-show" id="slide-show">
+        <img src="images/chuck-norris-death.jpg"></img>
       </div>
 
-<div class ="button-box">
-      <button class="back-button">previous</button>
-      <button class="next-button">next></button>
-      <button class="play-button">play</button>
-</div>
-
-
-
-
+      <div class ="button-box">
+        <button class="back-button">previous</button>
+        <button class="next-button">next</button>
+        <button class="play-button">play</button>
+      </div>
+      </div>
     <script src="script.js"></script>
   </body>
 
