everything works except auto play button

--- a/day-19-simple-slide-show/index.html
+++ b/day-19-simple-slide-show/index.html
@@ -14,8 +14,8 @@
         <h1>Chuck Norris: The World's Most Dangerous Man</h1>
       </header>
 
-      <div class="slide-show" id="slide-show">
-        <img src="images/chuck-norris-death.jpg"></img>
+      <div class="main-content">
+        <img class="slide-show"></img>
       </div>
 
       <div class ="button-box">
