--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <li><a href="day-28-joke-generator/index.html">Day 28 - Joke Generator</a></li>
   <li><a href="day-29-multistep-form/index.html">Day 29 - MultiStep Form</a></li>
   <li><a href="day-30-really-cool-form/index.html">Day 30 - Really Cool Form</a></li>
-  <li><a href="day-xx-javascript-variables/index.html"><Day XX - Javascript Variables</a></li>
+  <li><a href="day-xx-javascript-variables/index.html">Day XX - Javascript Variables</a></li>
 </ul>
 
 
